sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:6: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (i<-0 to getNombreBases-1) {
        ^